add: create jraw activity successfully
use OAuth2 to log in to Reddit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,10 @@
     <string name="pref_title_vibrate">Vibrate</string>
 
     <string name="pref_header_gaga">Lady Gaga</string>
+
+
+
+
+
+    <string name="title_activity_jraw">Jraw</string>
 </resources>
